# ai-calisthenics-workout-generator

./: .gitignore  AI_Calisthenics_Workout_Generator_Specs.md  README.md
backend/: .env.example  Makefile  main.py  pyproject.toml  pytest.ini
backend/app/: .gitignore  main.py
backend/app/ai/: prompts.py
backend/app/api/: main.py
backend/app/api/routes/: generate_workout.py
backend/app/core/: config.py
backend/app/db/: client.py  exercises.py  setProgressions.py  set_progressions.py
backend/app/schemas/: generate_workout.py
backend/tests/: conftest.py  test_sample.py
backend/tests/api/routes/: test_generate_workout.py
backend/tests/db/: test_exercises.py  test_set_progressions.py
frontend/: .env.example  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest-setup.ts
frontend/src/: main.tsx  routeTree.gen.ts  theme.ts
frontend/src/routes/: __root.tsx  index.tsx  workout.tsx
frontend/src/routes/__tests__/: index.test.tsx
frontend/src/schemas/: activeWorkoutSchema.ts  generateWorkoutSchema.ts
frontend/src/schemas/__tests__/: generateWorkoutSchema.test.tsx
frontend/src/stores/: useStore.ts
frontend/src/tests/mocks/: generatedWorkout.ts  index.ts
frontend/src/utils/: testUtils.tsx
