[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Fatima Anne Camero",email = "54559570+timamero@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
